--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   nginx:
     image: nginx
     container_name: ilia-website
+    restart: unless-stopped
     expose:
       - 80
     volumes:
